--- a/src/test/resources/map_example.yaml
+++ b/src/test/resources/map_example.yaml
@@ -7,6 +7,7 @@ action:
       action:
         return: foo
     - pattern:
-        path: /bar/
+        params:
+          bar: '.*'
       action:
         return: bar
