Change return type to Map

--- a/src/test/resources/map_example.yaml
+++ b/src/test/resources/map_example.yaml
@@ -5,9 +5,11 @@ action:
     - pattern:
         path: /foo/
       action:
-        return: foo
+        return:
+           tag: foo
     - pattern:
         params:
           bar: '.*'
       action:
-        return: bar
+        return:
+          tag: bar
