--- a/src/test/resources/list_example.yaml
+++ b/src/test/resources/list_example.yaml
@@ -1,12 +1,15 @@
 - pattern:
     host: '^example\.com$'
   action:
-    return: zero
+    return:
+      tag: zero
 - pattern:
     host: '^\w+\.example\.com$'
   action:
-    return: one
+    return:
+      tag: one
 - pattern:
     host: '^\w+\.\w+\.example\.com$'
   action:
-    return: two
+    return:
+      tag: two
