--- a/src/test/resources/list_example.yaml
+++ b/src/test/resources/list_example.yaml
@@ -1,11 +1,11 @@
 - host: '^example\.com$'
-  return:
+  attrs:
     tag: zero
 
 - host: '^\w+\.example\.com$'
-  return:
+  attrs:
     tag: one
 
 - host: '^\w+\.\w+\.example\.com$'
-  return:
+  attrs:
     tag: two
